# archex

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.campaign/retrieval-quality-v2/progress/: terminal-A.md  terminal-B.md  terminal-C.md  terminal-D.md  terminal-E.md  terminal-F.md  terminal-G.md  terminal-I.md
.github/workflows/: benchmark.yml  ci.yml  publish.yml
benchmarks/: baseline.json
benchmarks/delta_tasks/: archex_delta_large.yaml  archex_delta_small.yaml
benchmarks/tasks/: archex_adapter_registry.yaml  archex_delta_indexing.yaml  archex_pattern_detection.yaml  archex_query_pipeline.yaml  click_decorators.yaml  express_middleware.yaml  fastapi_dependency_injection.yaml  gin_routing.yaml  httpx_pooling.yaml  mini_redis_async.yaml  pydantic_validators.yaml
docs/: BENCHMARK_READINESS.md  ENHANCEMENT_PLAN.md  OVERVIEW.md  PLAN_EXPANDED_LANGUAGE_SUPPORT.md  ROADMAP.md  SYSTEM_DESIGN.md  WHY_ARCHEX.md
scripts/: showcase.py
src/archex/: __init__.py  api.py  cache.py  config.py  exceptions.py  models.py  reporting.py  utils.py
src/archex/acquire/: __init__.py  discovery.py  git.py  local.py
src/archex/analyze/: interfaces.py  modules.py  patterns.py
src/archex/benchmark/: __init__.py  baseline.py  delta_runner.py  delta_strategies.py  gate.py  loader.py  models.py  reporter.py  runner.py  strategies.py
src/archex/cli/: analyze_cmd.py  benchmark_cmd.py  cache_cmd.py  compare_cmd.py  main.py  mcp_cmd.py  outline_cmd.py  query_cmd.py  serve_cmd.py  symbol_cmd.py  symbols_cmd.py  tree_cmd.py
src/archex/index/: bm25.py  chunker.py  delta.py  fusion.py  graph.py  quantize.py  rerank.py  splade.py  store.py  vector.py
src/archex/index/embeddings/: __init__.py  api.py  base.py  coderank.py  fast.py  nomic.py  sentence_tf.py
src/archex/integrations/: __init__.py  langchain.py  llamaindex.py  mcp.py
src/archex/parse/: __init__.py  engine.py  imports.py  symbols.py
src/archex/parse/adapters/: __init__.py  _jvm_helpers.py  base.py  csharp.py  go.py  java.py  kotlin.py  python.py  rust.py  swift.py  typescript.py
src/archex/pipeline/: __init__.py  chunker.py  models.py  service.py  summarize.py
src/archex/providers/: anthropic.py  openai.py  openrouter.py
src/archex/serve/: __init__.py  app.py  compare.py  context.py  intent.py  profile.py  query.py
src/archex/serve/renderers/: __init__.py
src/archex/serve/static/: index.html
tests/: conftest.py  test_api_robustness.py  test_cache.py  test_cli.py  test_config.py  test_integration.py  test_models.py  test_performance.py  test_query_pipeline.py  test_reporting.py
tests/acquire/: test_discovery.py  test_git.py  test_local.py
tests/analyze/: test_modules.py  test_patterns.py
tests/benchmark/: test_baseline.py  test_cli.py  test_delta_strategies.py  test_gate.py  test_integration.py  test_loader.py  test_metrics.py  test_models.py  test_regression.py  test_reporter.py  test_runner.py  test_strategies.py  test_strategy_registry.py
tests/fixtures/: go_handler.go  java_repository.java  typescript_middleware.ts
tests/fixtures/csharp_simple/: Program.cs
tests/fixtures/csharp_simple/Events/: EventHandler.cs
tests/fixtures/csharp_simple/Models/: User.cs
tests/fixtures/csharp_simple/Services/: UserService.cs
tests/fixtures/csharp_simple/Utils/: StringExtensions.cs
tests/fixtures/go_simple/: handlers.go  main.go  models.go  utils.go
tests/fixtures/java_simple/: Main.java
tests/fixtures/java_simple/enums/: Status.java
tests/fixtures/java_simple/models/: Record.java  User.java
tests/fixtures/java_simple/services/: UserService.java
tests/fixtures/java_simple/utils/: StringUtils.java
tests/fixtures/kotlin_simple/: Main.kt
tests/fixtures/kotlin_simple/config/: AppConfig.kt
tests/fixtures/kotlin_simple/models/: User.kt
tests/fixtures/kotlin_simple/services/: UserService.kt
tests/fixtures/kotlin_simple/utils/: Extensions.kt
tests/fixtures/repos/false_positives/: utils.py
tests/fixtures/rust_simple/src/: lib.rs  main.rs  models.rs  utils.rs
tests/fixtures/swift_simple/: main.swift
tests/fixtures/swift_simple/Models/: User.swift
tests/fixtures/swift_simple/Services/: UserService.swift
tests/fixtures/swift_simple/Utils/: Extensions.swift
tests/fixtures/swift_simple/Views/: ContentView.swift
tests/index/: test_bm25.py  test_breadcrumbs.py  test_chunker.py  test_delta.py  test_fusion.py  test_graph.py  test_quantize.py  test_rerank.py  test_splade.py  test_store.py  test_symbol_ids.py  test_vector.py
tests/index/embeddings/: test_embeddings.py
tests/integrations/: test_langchain.py  test_llamaindex.py  test_lsap.py  test_mcp.py
tests/parse/: test_engine.py  test_imports.py  test_symbols.py
tests/parse/adapters/: test_csharp.py  test_go.py  test_java.py  test_jvm_cross.py  test_kotlin.py  test_python.py  test_rust.py  test_swift.py  test_typescript.py
tests/pipeline/: test_service.py  test_summarize.py
tests/providers/: test_providers.py
tests/serve/: test_compare.py  test_context.py  test_context_recall.py  test_intent.py  test_profile.py  test_query.py  test_query_normalization.py  test_renderers.py
